fixed ausbildung animation cut off

--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -6,6 +6,7 @@
     gap: 4vw;
     margin-bottom: 8vh;
     z-index: 300;
+    overflow: visible;
 }
 
 .education-entries {
